.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__AuthorizationDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Save user name and access token</description>
    <fields>
        <fullName>Dataplier__AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__AuthorisedUser__c</fullName>
        <label>Authorised User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Connected_App_Type__c</fullName>
        <label>Connected App Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__InstanceURL__c</fullName>
        <label>Instance URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dataplier__Is_Primary_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataplier__RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Authorization Details</label>
</CustomObject>